# flacser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  deploy-website.yml  release-please.yml
openspec/changes/add-cli-shorthand-flags/: design.md  proposal.md
openspec/changes/add-cli-shorthand-flags/specs/cli-shorthand-flags/: spec.md
openspec/changes/add-conversion-job-progress/: proposal.md  tasks.md
openspec/changes/archive/2026-04-27-add-cli-shorthand-flags/: tasks.md
openspec/changes/archive/2026-05-01-add-conversion-job-progress/: design.md  tasks.md
openspec/changes/archive/2026-05-01-add-conversion-job-progress/specs/conversion-progress-reporting/: spec.md
openspec/specs/cli-shorthand-flags/: spec.md
openspec/specs/conversion-progress-reporting/: spec.md
scripts/: flac2aiff
scripts/test/: flac2aiff.bats
src/: audio_format.rs  cli.rs  config.rs  convert.rs  discover.rs  doctor.rs  ffmpeg.rs  interrupt.rs  main.rs  plan.rs  progress.rs  sigint.rs  summary.rs
tests/: convert_circles.rs  convert_cli.rs  summary_output.rs
tests/support/: mod.rs
website/: 404.html  index.html  robots.txt  script.js  sitemap.xml  styles.css  usage.html
