[package]
name = "flacser"
version = "0.5.0"
edition = "2024"
description = "A fast CLI tool to convert lossless FLAC, AIFF, and WAV files using ffmpeg"
license = "MIT"
repository = "https://github.com/chrizzlekicks/flacser"
readme = "README.md"
keywords = ["audio", "flac", "aiff", "ffmpeg", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
rayon = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
