[package]
name = "flacser"
version = "1.0.0"
edition = "2024"
description = "A fast CLI tool to convert lossless FLAC, AIFF, and WAV files using ffmpeg"
license = "MIT"
repository = "https://github.com/chrizzlekicks/flacser"
readme = "README.md"
keywords = ["audio", "flac", "aiff", "ffmpeg", "cli"]
categories = ["command-line-utilities"]
exclude = [
  "Cargo.toml.orig",
  "AGENTS.md",
  "ARCHITECTURE.md",
  "openspec/**",
  ".codex/**",
  ".agents/**",
  ".opencode/**",
  ".github/**",
  "release-please-config.json",
  ".release-please-manifest.json",
  "scripts/**",
]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
ctrlc = "3"
rayon = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
